--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "url": "https://github.com/KiwiCodeSolution/Myasorobka-server/issues"
   },
   "homepage": "https://github.com/KiwiCodeSolution/Myasorobka-server#readme",
+  "engines": {
+    "node": ">=16.20.1"
+  },
   "devDependencies": {
     "nodemon": "^3.1.1"
-  },
+  }, 
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
